# Stash-Plex-NFOGenerator

./: .gitignore  AGENTS.md  CLAUDE.md  DRY_RUN_CHECKLIST.md  README.md  ROADMAP.md  Stashapp Library Migration to Plex - Project Context Document.md  TESTING - DRY_RUN_CHECKLIST.md  images.md  main.py  plex_exporter.yml  pyproject.toml  requirements.txt  stash_face_cropper.py  stash_nfo_assets.py  stash_nfo_generator.py  stash_plex_actor_processor.py  stash_plex_rollback.py  stash_rename.py
.claude/: settings.json
.claude/hooks/: ruff-fix.sh
.cursor/rules/: stash-plex-safety.mdc
.qwen/: Qwen.md  chat-Genre Tag Configuration.txt  chat-Plex Metadata Links.txt  chat-export-1778100141308.json  chat-export-1778161072087.json  chat-export-1779320915080.json  chat-export-1779325200584.json  coding_with_qwen.md
resources/: Stash-Plugins-Guide.md
