[project]
name = "stash-plex-nfogenerator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "opencv-python-headless>=4.13.0.92",
    "requests>=2.33.1",
    "stashapp-tools>=0.2.59",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# E/F: pycodestyle + pyflakes (defaults); I: import sorting; UP: pyupgrade; B: bugbear
select = ["E", "F", "I", "UP", "B"]
